# Remote-Desktop

./: .gitignore  .gitignore.swo  .gitignore.swp  CMakeLists.txt  README.md  shell.nix
api/include/api/: Authorization.hpp
api/src/: main.cpp
api/src/api/: Router.cpp
desktop/: CMakeLists.txt  shell.nix  test_regex.cpp
desktop/include/: StartWindow.h  main_window.h  mainmenu.h  start_window.h  startwindow.h  string_handler.h
desktop/include/services/: jwt.h  requests.h  storage.h  string_handler.h
desktop/include/windows/: main_window.h  start_window.h
desktop/src/: MainMenu.cpp  StartWindow.cpp  main.cpp  main_window.cpp  start_window.cpp  startwindow.cpp  startwindow.ui  string_handler.cpp
desktop/src/services/: jwt.cpp  requests.cpp  storage.cpp  string_handler.cpp
desktop/src/windows/: main_window.cpp  start_window.cpp
desktop/ui/: main_window.ui  mainmenu.ui  start_window.ui  startwindow.ui
include/: Database.h  Database.hpp  StringUtils.hpp
include/api/: Api.h  Api.hpp  Authorization.hpp  Registration.hpp  Router.hpp  authorization.hpp  registration.h
ios/: Info.plist  RemoteDesktopApp.swift
ios/Models/: Models.swift
ios/Services/: MockNetworkService.swift  NetworkServiceProtocol.swift  RealNetworkService.swift
ios/ViewModels/: AuthViewModel.swift  MainViewModel.swift
ios/Views/Components/: GlassCard.swift  Theme.swift
ios/Views/Screens/: AuthView.swift  MainView.swift
ios/server/include/services/: database.hpp  jwt.hpp
ios/server/src/: configs.yaml  main.cpp
ios/server/src/api/: authentication.cpp  authorization.cpp
ios/server/src/services/: database.cpp
iphone/: CMakeLists.txt
iphone/Remote-Desktop/: Info.plist  RemoteDesktopApp.swift
iphone/Remote-Desktop/Models/: Models.swift
iphone/Remote-Desktop/Services/: NetworkServiceProtocol.swift  RealNetworkService.swift
iphone/Remote-Desktop/ViewModels/: AuthViewModel.swift
iphone/Remote-Desktop/Views/Components/: AnimatedBackground.swift  GlassCard.swift
iphone/Remote-Desktop/Views/Screens/: AuthView.swift  MainView.swift
server/: CMakeLists.txt  cmake-nix.sh  shell.nix
server/include/: Database.hpp  JwtService.hpp  StringUtils.hpp
server/include/api/: Authorization.hpp  Registration.hpp  Router.hpp  authentication.hpp  authorization.hpp  registration.hpp  router.hpp
server/include/services/: Database.hpp  JWT.hpp  database.hpp  jwt.hpp  string_handler.hpp
server/src/: Database.cpp  JwtService.cpp  StringUtils.cpp  main.cpp
server/src/api/: Authorization.cpp  Registration.cpp  Router.cpp  authentication.cpp  authorization.cpp  registration.cpp  router.cpp
server/src/services/: Database.cpp  JWT.cpp  StringHandler.cpp  database.cpp  jwt.cpp  string_handler.cpp
src/: Database.cpp  StringUtils.cpp  main.cpp
src/api/: Api.cpp  Authorization.cpp  Registration.cpp  Router.cpp  authorization.cpp  registration.cpp
